--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
-    "start": "node dist/index.js",
+    "start": "cross-env TZ=UTC node dist/index.js",
     "clean": "rm -rf dist",
     "rebuild": "npm run clean && npm run build",
-    "inspect": "npm run build && npx @modelcontextprotocol/inspector \"node dist/index.js --scope public,contact,location,personal,memories --data-dir ./data\"",
+    "inspect": "npm run build && npx @modelcontextprotocol/inspector \"cross-env PERSONAL_INFO_ENCRYPTION_ENABLED=true PERSONAL_INFO_ENCRYPTION_KEY=1234567890 node dist/index.js --scope public,contact,location,personal,memories --data-dir ./data\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "type-check": "tsc --noEmit"
@@ -25,9 +25,14 @@
   "author": "Personal MCP Server",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.17.0",
+    "@modelcontextprotocol/sdk": "^0.4.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/qrcode": "^1.5.5",
+    "crypto-js": "^4.2.0",
     "fs-extra": "^11.3.0",
     "glob": "^11.0.3",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "yaml": "^2.8.0",
     "zod": "^4.0.10"
   },
